[build-system]
requires = ["setuptools>=68.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cordhook"
version = "0.2.8"
description = "Explicit Discord webhook data manipulation"
readme = "README.md"
authors = [{ name = "tainn" }]
keywords = ["package", "webhook", "discord"]
dependencies = ["httpx==0.24.1"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/cordhook"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["cordhook"]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["cordhook"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
