[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cordhook"
version = "0.2.9"
readme = "readme.md"
dependencies = [
    "httpx==0.27.0"
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/cordhook"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["cordhook"]

[tool.ruff.lint]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["cordhook"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
disable_error_code = [
    "no-any-return",
    "func-returns-value"
]
exclude = ["venv", "build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
