[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cordhook"
version = "0.2.10"
requires-python = ">=3.13"
dependencies = [
  "httpx==0.28.1"
]

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["cordhook"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "ANN",
  "B",
  "A",
  "ICN",
  "PIE",
  "Q",
  "RSE",
  "RET",
  "SIM",
  "ARG",
  "PTH",
]

[tool.ruff.lint.isort]
known-first-party = ["cordhook"]

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
